--- a/ASPNET_SHAH/appsettings.Development.json
+++ b/ASPNET_SHAH/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+
+    "SqlServerLocal": "Server=DESKTOP-2EC3G6R\\SQLEXPRESS;Database=pv311_mvc;Trusted_Connection=True;TrustServerCertificate=True;"
+
   }
 }
